--- a/demo-spring-source-analysis/build.gradle
+++ b/demo-spring-source-analysis/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     compile "org.springframework:spring-jdbc:${springVersion}"
     compile "org.springframework:spring-tx:${springVersion}"
     compile "org.springframework:spring-webmvc:${springVersion}"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'junit', name: 'junit', version: '4.12'
 }
