--- a/demo-spring-source-analysis/build.gradle
+++ b/demo-spring-source-analysis/build.gradle
@@ -25,5 +25,9 @@ dependencies {
     compile "org.springframework:spring-jdbc:${springVersion}"
     compile "org.springframework:spring-tx:${springVersion}"
     compile "org.springframework:spring-webmvc:${springVersion}"
+
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
+
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
     compile group: 'junit', name: 'junit', version: '4.12'
 }
